media queries added to stylesheet, started working on index.html, taking a break for now

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Basic Portfolio - Portfolio</title>
     <link href="assets/css/reset.css" type="text/css" rel="stylesheet">
     <link href="assets/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <section class="main-header-par">
-        <div class="main-header-chi">
+    <nav class="navbar-parent">
+        <div class="navbar-child">
             <h1 class="name">Bret Baker</h1>
             <div class="navbar">
                 <a class="navlinks" href="index.html">About</a>
@@ -18,7 +19,7 @@
                 <a class="navlinks" href="contact.html">Contact</a>
             </div>
         </div>   
-    </section>
+    </nav>
     <section class="main-content">
         <h1 class="main-content-head">Portfolio</h1>
         <a href="" class="project">
@@ -39,6 +40,7 @@
     </section>
 </body>
 <footer>
+    <div id="foot-space"></div>
     <section class="foot">
         <p id="copyright">Copyright &copy</p>
     </section>
