almost done, need to touch a few things up before submission

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,20 +22,20 @@
     </nav>
     <section class="main-content">
         <h1 class="main-content-head">Portfolio</h1>
-        <a href="" class="project">
-                <img src="assets/images/portfolio-1.jpg"><h2 class="project-title">Hangman</h2>
+        <a href="#" class="project">
+            <img class="proj-img" src="assets/images/portfolio-1.jpg"><h2 class="project-title">Hangman</h2>
         </a>
-        <a href="" class="project">
-            <img src="assets/images/portfolio-2.jpg"><h2 class="project-title">RPG Game</h2>
+        <a href="#" class="project">
+            <img class="proj-img" src="assets/images/portfolio-2.jpg"><h2 class="project-title">RPG Game</h2>
         </a>
-        <a href="" class="project">
-            <img src="assets/images/portfolio-3.jpg"><h2 class="project-title">Trivia Game</h2>
+        <a href="#" class="project">
+            <img class="proj-img" src="assets/images/portfolio-3.jpg"><h2 class="project-title">Trivia Game</h2>
         </a>
-        <a href="" class="project">
-            <img src="assets/images/portfolio-4.jpg"><h2 class="project-title">Rutgers Info Widget</h2>
+        <a href="#" class="project">
+            <img class="proj-img" src="assets/images/portfolio-4.jpg"><h2 class="project-title">Rutgers Info Widget</h2>
         </a>
-        <a href="" class="project">
-            <img src="assets/images/portfolio-5.jpg"><h2 class="project-title">Rock Paper Scissors</h2>
+        <a href="#" class="project">
+            <img class="proj-img" src="assets/images/portfolio-5.jpg"><h2 class="project-title">Rock Paper Scissors</h2>
         </a>
     </section>
 </body>
